# marvinhooks

./: Cargo.toml  flake.nix
.github/workflows/: build_and_deploy.yaml
src/: main.rs
src/api/: client.rs  error.rs  mod.rs  requests.rs  responses.rs
src/cache/: cache.rs
src/handlers/: marvin.rs  mod.rs
src/models/: calendars.rs  habits.rs  labels.rs  mod.rs  profiles.rs  reminders.rs  rewards.rs  tasks.rs  timers.rs  tracking.rs  webhooks.rs
src/routes/: marvin_webhooks.rs  mod.rs  third_time.rs
src/toggl_api/: client.rs  error.rs  mod.rs  requests.rs  responses.rs
