[package]
name = "marvinhooks"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json" ] }
hyper = { version = "1", features = ["full"] }
chrono = "0.4"
regex = "1"